change docker-compose to use mariadb on RPi 4

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,7 +22,7 @@ services:
 
   akaunting-db:
     container_name: akaunting-db
-    image: mariadb
+    image: linuxserver/mariadb
     volumes:
       - akaunting-db:/var/lib/mysql
     restart: unless-stopped
